[package]
name = "wanderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8", features = ["lua51", "vendored"] }
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
regex = "1.5.6"
rand = "0.8.5"